sun and text correctly positioned on mobile

--- a/funsun/style.css
+++ b/funsun/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 //This is the whole entire container
-#main {
+#header {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -15,6 +15,17 @@ body {
     height: 100vh;
     width: 100vw;
     overflow: hidden;
+}
+
+.header-text {
+    //border: 1px solid black;
+    //height: 100%;
+    font-size: 3em;
+    //width: 95vw;
+    padding: 0 10%;
+    color: white;
+    //background: gray;
+    //border-radius: 50%;
 }
 
 .main-text {
@@ -59,7 +70,10 @@ body {
     transform: rotate(135deg);
 }*/
 
-
+.skills {
+    text-align: center;
+    color: white;
+}
 
 @keyframes glow {
     0%, 100% {
@@ -136,12 +150,14 @@ body {
 }
 
 .cloud {
-    position: absolute;
+    //position: absolute;
     //overflow: hidden;
     width: 258px;
     height: 150px;
+    //width: 100%;
+    //height: 100%;
     transition: right 0.5s ease-in-out infinite;
-    z-index: 10;
+    //z-index: 10;
 }
 
 .cloud:nth-child(1) {
@@ -151,9 +167,10 @@ body {
 }
 
 .cloud:nth-child(2) {
+    margin-left: 20%;
     top: 300px;
     left: 550px;
-    transform: scale(0.7);
+    transform: scale(2);
 }
 
 .cloud:nth-child(3) {
@@ -234,4 +251,13 @@ body {
 
 @keyframes stars {
 
+}
+
+@media (min-width: 1000px) {
+    body {
+        font-size: 4em;
+    }
+    svg {
+        viewBox: 0 0 100 100;
+    }
 }
